added port connection status

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,6 +9,7 @@
         <h1 class="heading">
           <img src="../assets/logo-48.png" height="32px" alt="logo"/>
           <span class="fw-300">Auto<span class="fw-500">Connect</span></span>
+          <span class="port-connection-status" id="js-port-connection-status"></span>
         </h1>
         <div class="options">
           <button class="btn btn-ellipsis">
